test/netlist/error/unused-fun-param.bop
A<N>(a) = b
where
  b = Not(a);
end where;

A(a) = b
where
  b = A<id>(a);
end where;
